--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Kaminari Image Board</title>
-    <link rel="stylesheet" href="/css/global.css">
-</head>
-<body>
+<%- include('fragments/head'); %>
+
     <h1>Kaminari Image board</h1>
+
+    <h2>Welcome!</h2>
+
+    <p>[<a href="/admin">Management</a>]</p>
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias amet aspernatur delectus enim, exercitationem fugit
         ipsa iste iure magnam minima nam necessitatibus optio perspiciatis porro quasi quod ratione repellat voluptates.
     </p>
 
-    <script src="/js/wakaba.js"></script>
-</body>
-</html>
+<%- include('fragments/eof'); %>
