--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kaminari Image Board</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/photon.css">
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 </head>
 <body>
