[KAMINARI-5] Board management section has been added
Issue: KAMINARI-5

--- a/views/admin-index.ejs
+++ b/views/admin-index.ejs
@@ -16,7 +16,7 @@
     <li><a href="/admin/technical">Technical info</a></li>
     <li><a href="/admin/staff/me">My Profile</a></li>
     <li><a href="/admin/staff">Administration & Moderation list</a></li>
-    <li><a href="#">Board list</a></li>
+    <li><a href="/admin/boards">Board list</a></li>
 </ul>
 
 <%- include('fragments/admin-bar'); %>
