--- a/views/admin-technical-info.ejs
+++ b/views/admin-technical-info.ejs
@@ -72,6 +72,9 @@
         <% }); %>
     </ol>
 
+    <h3>PostgreSQL</h3>
+    <p><a href='https://www.postgresql.org/' target='_blank'>PostgreSQL</a> version: <b><%= postgresVersion %></b></p>
+
 <% } %>
 
 [<a href="/admin">Go back</a>]
