[KAMINARI-7] Settings and its management section has been added
Issue: KAMINARI-7

--- a/views/admin-index.ejs
+++ b/views/admin-index.ejs
@@ -15,6 +15,7 @@
 <ul>
     <li><a href="/admin/technical">Technical info</a></li>
     <li><a href="/admin/staff/me">My Profile</a></li>
+    <li><a href="/admin/settings">Global site settings</a></li>
     <li><a href="/admin/staff">Administration & Moderation list</a></li>
     <li><a href="/admin/boards">Board list</a></li>
 </ul>
