--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html lang="en">
 <head>
-    <title>Kaminari image board</title>
+    <title><%= title %></title>
     <link rel="shortcut icon" href="/icons/favicon.ico">
 </head>
 <frameset cols="15%,*" frameborder="1" border="1">
     <frame src="/menu" name="menu" id="menu">
     <frame src="/main" name="main" id="main">
     <noframes>
-        Your browser doesn't support frames, which Kaminari Image Board requires.<br>
+        Your browser doesn't support frames, which <%= title %> requires.<br>
         Please upgrade to something newer.
     </noframes>
 </frameset>
