--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -9,18 +9,9 @@
     <base target="main">
 </head>
 <body>
-    <h1><a href="/main">Kaminari IB</a></h1>
+    <h1><a href="/main"><%= leftMenuHeader %></a></h1>
 
-    <hr>
-    <div class="menu-header">About Site</div>
-    <p><a href="#">FAQ</a></p>
-    <p><a href="#">Rules</a></p>
-
-    <hr>
-    <div class="menu-header">Boards</div>
-    <p><a href="#">/b/ — Random</a></p>
-    <p><a href="#">/a/ — Anime</a></p>
-    <p><a href="#">/bb/ — Random Plus</a></p>
+    <%- leftMenuContent %>
 
     <hr>
 </body>
