[KAMINARI-9] Comments posting and deletion have been added
Issue: KAMINARI-9

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -49,7 +49,9 @@ form {
 }
 
 .userdelete {
-    float: right; text-align: center; white-space: nowrap;
+    float: right;
+    text-align: center;
+    white-space: nowrap;
 }
 
 .replypage .replylink {
