--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/photon.css">
+    <link rel="stylesheet" href="/css/global.css" type="text/css">
+    <link rel="stylesheet" href="/css/photon.css" type="text/css">
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+    <script src="/js/jquery-1.12.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript">var styleCookie = 'kaminariStyle';</script>
+    <script type="text/javascript" src="/js/kaminari.js"></script>
 </head>
 <body>
